2004-05-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/set.c (set_range): Fix SF bug #946900: buggy interaction of
	'set view map' with 'set yrange'.
	(set_view): Make error message string variables static and const
	to preserve some stack.

2004-05-03  Ethan Merritt  <merritt@u.washington.edu>

	* src/mouse.c, term/x11.trm:  Move handling of mouse click after
	'pause mouse' from mouse.c to x11.trm.  This removes an otherwise
	unnecessary do_string("replot") from mouse.c, and instead adds an
	explicit check for mouse button release in X11_waitforinput().

	* demo/mousevariables.dem: Add a comment after final pause command.

	* src/set.c src/unset.c: Call gp_strdup() rather than strdup() as
	otherwise the test in ./configure is pointless, and gnuplot fails
	to link on systems without strdup().

	* term/x11.trm: Redefine VMS-only macro to allow if/then/else
	constructs: GO(x) = do {} while (0)

	* src/show.c: Protect call to add_history() with a test for the
	presence of READLINE support.

2004-04-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gpcard.tex: Remove duplicated X11 terminal entry.

2004-04-29  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/gnuplot.doc: Fix description of default format being "% g"
	instead of "%g".
	
2004-04-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: New section "Gnuplot-defined variables". Reference
	function defined(x) from section "User-defined variables".

2004-04-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Correct the placement of rotated text to account
	for the difference in x and y coordinate scaling. This greatly
	improves the rendering of rotated text in enhanced text mode.

2004-04-22  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/axis.c (set_cbminmax): Don't bail out if cbrange is empty.
	Let the caller handle it by auto-extending the range, as usual.

	* src/command.c (read_line): Fix bug where growing the line buffer